--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@portabletext/react": "^1.0.3",
-    "@sanity/client": "^3.1.0",
-    "@sanity/image-url": "^1.0.1",
-    "next": "12.0.10",
-    "next-sanity": "0.5.0",
-    "next-sanity-image": "^3.2.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@portabletext/react": "^4.0.2",
+    "@sanity/client": "^7.10.0",
+    "@sanity/image-url": "^1.2.0",
+    "next": "^15.5.2",
+    "next-sanity": "^10.0.15",
+    "next-sanity-image": "^6.2.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10"
+    "eslint": "^9.34.0",
+    "eslint-config-next": "^15.5.2"
   }
 }
