--- a/recipes/package.json
+++ b/recipes/package.json
@@ -7,25 +7,27 @@
   "author": "Joshua Jensen <ender2821@yahoo.com>",
   "license": "UNLICENSED",
   "scripts": {
-    "start": "sanity start",
-    "build": "sanity build"
+    "dev": "sanity dev",
+    "start": "sanity dev",
+    "build": "sanity build",
+    "deploy": "sanity deploy",
+    "deploy-graphql": "sanity graphql deploy"
   },
   "keywords": [
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.27.0",
-    "@sanity/core": "^2.27.0",
-    "@sanity/default-layout": "^2.27.0",
-    "@sanity/default-login": "^2.27.0",
-    "@sanity/desk-tool": "^2.27.0",
-    "@sanity/eslint-config-studio": "^2.0.0",
-    "@sanity/vision": "^2.27.0",
-    "eslint": "^8.6.0",
-    "prop-types": "^15.7",
-    "react": "^17.0",
-    "react-dom": "^17.0",
-    "styled-components": "^5.2.0"
+    "sanity": "^4.6.0",
+    "@sanity/vision": "^4.6.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-is": "^18.0.0",
+    "styled-components": "^6.1.15"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@sanity/eslint-config-studio": "^4.0.0",
+    "@types/react": "^18.0.0",
+    "eslint": "^9.0.0",
+    "typescript": "^5.0.0"
+  }
 }
